--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,27 @@ styles/bourbon/_bourbon.scss
 styles/bourbon/addons
 styles/bourbon/css3
 styles/bourbon/functions
-styles/bourbon/helpers
+styles/bourbon/helpersaudio/stems/+a Carolina - RC Mix 4 All Drums + Perc Stem.wav
+audio/stems/+b Carolina - RC Mix 4 Loops Stem.wav
+audio/stems/+c Carolina - RC Mix 4 Kick Stem.wav
+audio/stems/+d Carolina - RC Mix 4 Snare Stem.wav
+audio/stems/+e Carolina - RC Mix 4 Timpani Stem.wav
+audio/stems/+f Carolina - RC Mix 4 Kit Stem.wav
+audio/stems/+g Carolina - RC Mix 4 Perc Stem.wav
+audio/stems/+h Carolina - RC Mix 4 Prog Kit Stem.wav
+audio/stems/+i Carolina - RC Mix 4 Bass Stem.wav
+audio/stems/+j Carolina - RC Mix 4 Chorus Ld Gtrs Stem.wav
+audio/stems/+k Carolina - RC Mix 4 Hook Gtr Stem.wav
+audio/stems/+l Carolina - RC Mix 4 Spacey Gtrs Stem.wav
+audio/stems/+m Carolina - RC Mix 4 Lead Vocs Stem.wav
+audio/stems/+n Carolina - RC Mix 4 Main Backing Vocs Stem.wav
+audio/stems/+o Carolina - RC Mix 4 Chorus Backing Vocs Stem.wav
+audio/stems/+p Carolina - RC Mix 4 Ad Lib Vocs Stem.wav
+audio/stems/+q Carolina - RC Mix 4 Whoah-oh Vocs Stem.wav
+audio/stems/+r Carolina - RC Mix 4 Piano Stem.wav
+audio/stems/+s Carolina - RC Mix 4 Vanguard Synth Stem.wav
+audio/stems/+t Carolina - RC Mix 4 Timon Bass Riff Stem.wav
+audio/stems/+u Carolina - RC Mix 4 Mellotron-Arp Stem.wav
+audio/stems/+v Carolina - RC Mix 4 Emu + Organ Stem.wav
+audio/stems/+w Carolina - RC Mix 4 Strings Stem.wav
+audio/stems/+x Carolina - RC Mix 4 Sound FX Stem.wav
