project plays multiple times

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,15 @@ audio/stems/+u Carolina - RC Mix 4 Mellotron-Arp Stem.wav
 audio/stems/+v Carolina - RC Mix 4 Emu + Organ Stem.wav
 audio/stems/+w Carolina - RC Mix 4 Strings Stem.wav
 audio/stems/+x Carolina - RC Mix 4 Sound FX Stem.wav
+styles/.sass-cache/00036b0c6d4eda09e6f42c8015669e7465831ab5
+styles/.sass-cache/018657e2cb332d1cc6a1601093cc45d9ddc109b6
+styles/.sass-cache/12b614d52fe5d792cdb2133f9ffe9bbc0ffa1a29
+styles/.sass-cache/18a44f93c1a5fd571d25013b914ca605596de9c5
+styles/.sass-cache/784994188db8737117e4ae06550ff8c264f80227
+styles/.sass-cache/ad6e92c7319f37db62903915e7dfee0f8db395bb
+styles/.sass-cache/be9fbce0a0a4dd3171e1c2b23b41cc654c420cf1
+styles/.sass-cache/c53ccb6103fed42930d3271cb3855108a7542d3f
+styles/.sass-cache/d0a4e5e17d62977a81c707d3082855a4fa49c71e
+styles/.sass-cache/dcc5723cc7c3c4be38e6c8ec201edf0e863c7df0
+styles/.sass-cache/eb521f344d7d9a772154aeb983f972cdeac4c7de
+styles/.sass-cache/ed2667ddf22947983b156b7675878d2e10b7f0c2
