Android Experiments history overwrite

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,20 @@ styles/.sass-cache/d0a4e5e17d62977a81c707d3082855a4fa49c71e
 styles/.sass-cache/dcc5723cc7c3c4be38e6c8ec201edf0e863c7df0
 styles/.sass-cache/eb521f344d7d9a772154aeb983f972cdeac4c7de
 styles/.sass-cache/ed2667ddf22947983b156b7675878d2e10b7f0c2
+styles/bourbon/settings
+build/
+build/app.js
+build/app.min.js
+styles/bourbon/helpers/_convert-units.scss
+styles/bourbon/helpers/_gradient-positions-parser.scss
+styles/bourbon/helpers/_is-num.scss
+styles/bourbon/helpers/_linear-angle-parser.scss
+styles/bourbon/helpers/_linear-gradient-parser.scss
+styles/bourbon/helpers/_linear-positions-parser.scss
+styles/bourbon/helpers/_linear-side-corner-parser.scss
+styles/bourbon/helpers/_radial-arg-parser.scss
+styles/bourbon/helpers/_radial-gradient-parser.scss
+styles/bourbon/helpers/_radial-positions-parser.scss
+styles/bourbon/helpers/_render-gradients.scss
+styles/bourbon/helpers/_shape-size-stripper.scss
+styles/bourbon/helpers/_str-to-num.scss
